--- a/.github/workflows/build-push-action.yml
+++ b/.github/workflows/build-push-action.yml
@@ -17,4 +17,4 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: yassinsiouda/docker_rancher
-          tags: user/app:latest
+          tags: latest
